--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     ],
     "catalog": {
       "hono": "^4.8.2",
-      "@hono/trpc-server": "^0.3.5",
-      "@trpc/server": "^11.5.0",
-      "@trpc/client": "^11.5.0",
+      "@hono/trpc-server": "^0.4.0",
+      "@trpc/server": "^11.0.0",
+      "@trpc/client": "^11.0.0",
+      "@trpc/react-query": "^11.0.0",
       "zod": "^3.24.0",
       "typescript": "^5.8.2",
       "tsdown": "^0.15.5",
       "openai": "^4.77.0",
       "@anthropic-ai/sdk": "^0.35.0",
       "@google/generative-ai": "^0.21.0",
-      "drizzle-orm": "^0.44.2",
+      "drizzle-orm": "^0.38.0",
       "pg": "^8.14.1",
       "better-auth": "^1.3.28",
       "next": "^15.1.0",
