Fix build issues and complete E2E testing
- Fix postcss config for Tailwind v4 (@tailwindcss/postcss)
- Fix Council constructor usage (registry as first arg)
- Add test-council.ts for E2E testing
- Successfully tested with Google Gemini provider
- All 6 phases of council pipeline working:
  * Phase 1 & 2: Fan-out and Generation
  * Phase 3: Anonymize & Share
  * Phase 4: Critique Round
  * Phase 5: Chairman Synthesis
  * Phase 6: Clean Output
- Server and Web app both build and run successfully

--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,17 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalDotEnv": [".env"],
+  "globalPassThroughEnv": [
+    "OPENAI_API_KEY",
+    "ANTHROPIC_API_KEY", 
+    "GOOGLE_AI_KEY",
+    "GROK_API_KEY",
+    "DATABASE_URL",
+    "BETTER_AUTH_SECRET",
+    "PORT",
+    "NODE_ENV",
+    "NEXT_PUBLIC_SERVER_URL"
+  ],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
@@ -8,7 +20,8 @@
     },
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "dotEnv": [".env"]
     },
     "check-types": {
       "dependsOn": ["^check-types"]
