--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "react": "catalog:",
     "react-dom": "catalog:",
     "@trpc/client": "catalog:",
+    "@trpc/react-query": "catalog:",
     "@tanstack/react-query": "catalog:",
     "@council/api": "workspace:*",
     "tailwindcss": "catalog:",
@@ -22,9 +23,11 @@
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
-    "typescript": "catalog:",
+    "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@types/node": "^22.0.0"
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "typescript": "catalog:"
   }
 }
