--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
       "drizzle-orm": "^0.38.0",
       "pg": "^8.14.1",
       "better-auth": "^1.3.28",
-      "next": "^15.1.0",
+      "next": "^16.0.0",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
       "@tanstack/react-query": "^5.85.5",
@@ -44,6 +44,7 @@
     "clean": "turbo clean && rm -rf node_modules"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/bun": "^1.3.3",
     "turbo": "^2.5.4",
     "typescript": "catalog:"
