--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDotEnv": [".env"],
-  "globalPassThroughEnv": [
+  "globalEnv": [
     "OPENAI_API_KEY",
     "ANTHROPIC_API_KEY", 
     "GOOGLE_AI_KEY",
@@ -20,8 +19,7 @@
     },
     "dev": {
       "cache": false,
-      "persistent": true,
-      "dotEnv": [".env"]
+      "persistent": true
     },
     "check-types": {
       "dependsOn": ["^check-types"]
