--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,19 +10,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "catalog:",
-    "react": "catalog:",
-    "react-dom": "catalog:",
+    "@council/api": "workspace:*",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
     "@trpc/react-query": "catalog:",
-    "@tanstack/react-query": "catalog:",
-    "@council/api": "workspace:*",
-    "tailwindcss": "catalog:",
-    "lucide-react": "^0.460.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.6.0"
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.460.0",
+    "next": "catalog:",
+    "radix-ui": "^1.4.3",
+    "react": "catalog:",
+    "react-dom": "catalog:",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "catalog:"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
